# voxelizer

./: .gitignore  .gitmodules  README.md  voxelizer.h
example/: Makefile  main.cpp  voxelizer.c
ui/: CMakeLists.txt  main.cpp
ui/resources/: default.glsl
